[tool.poetry]
name = "cis188-hw4-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
redis = "^3.5.3"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
requests = "^2.25.1"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
